# xCoreSDK-CPP

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
doc/: .gitignore  CMakeLists.txt
doc/doxygen/: Doxyfile.in
example/: CMakeLists.txt  move_example.cpp  path_record.cpp  print_helper.hpp  read_robot_state.cpp  rl_project.cpp  sdk_example.cpp  xmatemodel_er3_er7p.cpp
example/rt/: CMakeLists.txt  cartesian_impedance_control.cpp  cartesian_s_line.cpp  follow_joint_position.cpp  joint_impedance_control.cpp  joint_position_control.cpp  joint_s_line.cpp  move_commands.cpp  rt_industrial.cpp  torque_control.cpp
include/: CMakeLists.txt
include/rokae/: base.h  data_types.h  exception.h  model.h  motion_control_rt.h  planner.h  robot.h  utility.h
lib/: CMakeLists.txt
lib/Linux/cpp/aarch64/: libxCoreSDK.so.0.3.4
lib/Linux/cpp/x86_64/: libxCoreSDK.nomodel.so.0.3.4  libxCoreSDK.so.0.3.4
lib/Linux/cpp/x86_64/NoModel/: libxCoreSDK.so.0.3.4
lib/Windows/cpp/Debug/32bit/: xCoreSDK.lib  xCoreSDK_static.lib
lib/Windows/cpp/Debug/64bit/: xCoreSDK.lib  xCoreSDK_static.lib  xMateModeld.lib
lib/Windows/cpp/Release/32bit/: xCoreSDK.lib  xCoreSDK_static.lib
lib/Windows/cpp/Release/64bit/: xCoreSDK.lib  xCoreSDK_static.lib  xMateModel.lib
